Jann 30/objects/ITPR__c.object
<CustomObject>
    <fields>
        <fullName>Is_System_Participation_Allowed__c</fullName>
        <inlineHelpText>Answer ‘Yes’ if another member of The Coca-Cola System other than the contracting organization can leverage this agreement through a Participant letter.</inlineHelpText>
        <label>Is System Participation Allowed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_this_NDA_to_be_mutual_or_will_the_com__c</fullName>
        <inlineHelpText>Indicate whether this project is for the Freestyle program.</inlineHelpText>
        <label>Is This a Freestyle Project?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Labor_Services_Checklist_Completed__c</fullName>
        <inlineHelpText>If this effort has labor services components retrieve job aid from the SharePoint and complete checklist.</inlineHelpText>
        <label>Labor Services? Checklist Completed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ITPRXU7m</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Long_Term_Commitments_Obligations__c</fullName>
        <label>Long-Term Commitments/Obligations?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Manager of the person in ‘Submitted On Behalf Of&apos;.</inlineHelpText>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ITPRXpnP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_Group_Code__c</fullName>
        <label>Material Group Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Misc_Finance_Notes__c</fullName>
        <label>Misc. Finance Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Misc_Legal_Notes__c</fullName>
        <label>Misc. Legal Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Misc_Procurement_Notes__c</fullName>
        <label>Misc. Procurement Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Misc_Vendor_Governance_Notes__c</fullName>
        <label>Misc. Vendor Governance Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_COA__c</fullName>
        <inlineHelpText>Answer ‘Yes’ if this contract represents a new COA with a supplier.</inlineHelpText>
        <label>New COA?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Master_COA_Logged_In_Contract_DB__c</fullName>
        <inlineHelpText>If this is a new master agreement or a new COA, update the contract database located on the internal IT Procurement Teamsite.</inlineHelpText>
        <label>New Master/COA? Logged In Contract DB?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Master__c</fullName>
        <inlineHelpText>Answer ‘Yes’ if this contract represents a new master agreement with a supplier.  Answer ‘Yes’ if this is an incumbent supplier with a new type of master agreement (e.g. software supplier who has had a MSLA and now has Master SaaS as well).</inlineHelpText>
        <label>New Master?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Supplier_Financial_Analysis_Done__c</fullName>
        <inlineHelpText>Finance should review D&amp;B or some other source to determine if entering into an agreement with this company is low or high risk.</inlineHelpText>
        <label>New Supplier Financial Analysis Done?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Not_Executed_and_Closed_Date__c</fullName>
        <description>Date when the request status changed to Not Executed and Closed Date</description>
        <label>Not Executed and Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OPEX1__c</fullName>
        <label>OPEX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPEX2__c</fullName>
        <label>OPEX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPEX3__c</fullName>
        <label>OPEX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPEX_Total1__c</fullName>
        <label>OPEX Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPEX_Total_Formula__c</fullName>
        <formula>OPEX1__c + OPEX2__c + OPEX3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OPEX Total Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Statement__c</fullName>
        <inlineHelpText>Provide a description of the project which is associated with this request.</inlineHelpText>
        <label>Opportunity Statement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <inlineHelpText>This is the TCCC company which has budget responsibility for the request.  This field drives both initial assignment and Chart of Authority during the approval process.</inlineHelpText>
        <label>Organization</label>
        <picklist>
            <picklistValues>
                <fullName>GIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIG IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCR IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCNA IT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outside_Counsel_Support__c</fullName>
        <inlineHelpText>If this was supported by outside counsel, please enter the supporting attorney&apos;s name.</inlineHelpText>
        <label>Outside Counsel Support</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Project_Final_Budget_Date__c</fullName>
        <description>Date when the request status changed to Pending Project Final Budget</description>
        <label>Pending Project Final Budget Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Portfolio_Department__c</fullName>
        <inlineHelpText>Please enter the name of the Department responsible for approving the contract</inlineHelpText>
        <label>Portfolio/Department</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Assignee_Prior_Value__c</fullName>
        <label>Primary Assignee Prior Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Assignee__c</fullName>
        <label>Primary Assignee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_to_Budget_Time__c</fullName>
        <description>Days between In Process Date and Pending Project Final Budget Date</description>
        <formula>IF( 
(NOT(ISNULL(Pending_Project_Final_Budget_Date__c)) &amp;&amp; NOT(ISNULL(In_Process_Date__c))), 
(IF(
Pending_Project_Final_Budget_Date__c &gt; In_Process_Date__c, Pending_Project_Final_Budget_Date__c - In_Process_Date__c, In_Process_Date__c - Pending_Project_Final_Budget_Date__c
)), 
(IF(
ISNULL(Pending_Project_Final_Budget_Date__c) &amp;&amp; NOT(ISNULL(In_Process_Date__c)), 
0, 
(IF(
NOT(ISNULL(Pending_Project_Final_Budget_Date__c)), 
(IF(
NOT(ISNULL(Assigned_Date__c)), Pending_Project_Final_Budget_Date__c - Assigned_Date__c ,
(IF(
NOT(ISNULL(Submitted_Date__c)),Pending_Project_Final_Budget_Date__c - Submitted_Date__c, Pending_Project_Final_Budget_Date__c - DATEVALUE(CreatedDate)
))
))
,0)) 
)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken by request to get to Pending Project Final Budget after getting accepted (In Process)</inlineHelpText>
        <label>Process to Budget Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_to_Complete_Time__c</fullName>
        <description>Days between In Process Date and Complete Date</description>
        <formula>IF( 
(NOT(ISNULL(In_Process_Date__c)) &amp;&amp; NOT(ISNULL(Complete_Date__c))), 
(IF( 
Complete_Date__c &gt; In_Process_Date__c, Complete_Date__c - In_Process_Date__c, In_Process_Date__c - Complete_Date__c 
)), 
(IF( 
ISNULL(Complete_Date__c) &amp;&amp; NOT(ISNULL(In_Process_Date__c)), 
0, 
(IF( 
NOT(ISNULL(Complete_Date__c)), 
(IF( 
NOT(ISNULL(Assigned_Date__c)), Complete_Date__c - Assigned_Date__c , 
(IF( 
NOT(ISNULL(Submitted_Date__c)),Complete_Date__c - Submitted_Date__c, 
Complete_Date__c - DATEVALUE(CreatedDate) 
)) 
)) 
,0)) 
)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken by request to get Complete after getting Accepted By Primary Assignee</inlineHelpText>
        <label>Process to Complete Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_to_In_Approvals_Time__c</fullName>
        <description>Days between In Process Date and In Approvals Date</description>
        <formula>IF( 
(NOT(ISNULL(In_Process_Date__c)) &amp;&amp; NOT(ISNULL(In_Approvals_Date__c))), 
(IF(
In_Approvals_Date__c &gt; In_Process_Date__c, In_Approvals_Date__c - In_Process_Date__c, In_Process_Date__c - In_Approvals_Date__c
)), 
(IF(
ISNULL(In_Approvals_Date__c) &amp;&amp; NOT(ISNULL(In_Process_Date__c)), 
0, 
(IF(
NOT(ISNULL(In_Approvals_Date__c)), 
(IF(
NOT(ISNULL(Assigned_Date__c)), In_Approvals_Date__c - Assigned_Date__c ,
(IF(
NOT(ISNULL(Submitted_Date__c)),In_Approvals_Date__c - Submitted_Date__c, 
In_Approvals_Date__c - DATEVALUE(CreatedDate)
))
))
,0)) 
)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken by request to get In Approvals after getting accepted (In Process)</inlineHelpText>
        <label>Process to In Approvals Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Procurement_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Procurement Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ITPRXU7c</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Cost_Center1__c</fullName>
        <label>Project/Cost Center</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Cost_Center2__c</fullName>
        <label>Project/Cost Center</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Cost_Center3__c</fullName>
        <label>Project/Cost Center</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Reference_ID__c</fullName>
        <inlineHelpText>This is currently only required by CCNAG. This is the PlanView ID.</inlineHelpText>
        <label>Project Reference ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provide_Comments_For_Budget_Exception_PO__c</fullName>
        <inlineHelpText>Type in any financial comments that might be helpful to the approvers</inlineHelpText>
        <label>Provide Comments For Budget/Exception PO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reassignment_Time__c</fullName>
        <description>Days between Submitted Date and Assigned Date</description>
        <formula>IF(
(NOT(ISNULL(Assigned_Date__c)) &amp;&amp; NOT(ISNULL(Submitted_Date__c))),
(IF(Assigned_Date__c &gt; Submitted_Date__c, Assigned_Date__c - Submitted_Date__c, Submitted_Date__c - Assigned_Date__c)),
(
IF(ISNULL(Assigned_Date__c) &amp;&amp; NOT(ISNULL(Submitted_Date__c)), 
0,
(IF(NOT(ISNULL(Assigned_Date__c)), Assigned_Date__c -  DATEVALUE(CreatedDate), 0))
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken by request to get reassigned after getting Submitted</inlineHelpText>
        <label>Reassignment Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Comments_Updates__c</fullName>
        <inlineHelpText>Notes entered by procurement, legal or finance on the progress of this request</inlineHelpText>
        <label>Request Comments / Updates</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <inlineHelpText>Use this field to identify the type of assistance you are requesting.  Please see the attached PDF entitled “Request Type” for a definition of the different request types.</inlineHelpText>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>NDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eval Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change In Existing Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter Of Termination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Access Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Legal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requestor_Budget_Notes__c</fullName>
        <label>Requestor Budget Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFAS_133_Embedded_Derivatives__c</fullName>
        <inlineHelpText>Derivative includes certain commodity-based contracts and purchase agreements that contain embedded derivative-like structures (such as price caps and floors, cash settlement provisions).</inlineHelpText>
        <label>SFAS 133 - Embedded Derivatives?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Savings__c</fullName>
        <inlineHelpText>Enter the total amount of savings achieved through negotiations.</inlineHelpText>
        <label>Savings</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Spelling_And_Formatting_Checked__c</fullName>
        <inlineHelpText>Before loading the final document, be sure you have run spell check as well as read for common grammatical mistakes and made appropriate corrections. Be sure the document is formatted correctly.</inlineHelpText>
        <label>Spelling And Formatting Checked?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Standard_Indemnifications_Including_IP__c</fullName>
        <label>Standard Indemnifications, Including IP?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Standard_Representations_Warranties__c</fullName>
        <label>Standard Representations/Warranties?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Or_Country_Of_Formation__c</fullName>
        <inlineHelpText>Please enter the state or country in which the supplier&apos;s firm was formed as a corporation, LLC, etc.</inlineHelpText>
        <label>State Or Country Of Formation</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Indicates where the request is in the process flow.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending More Info Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Project Final Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Approvals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Digital Initials Obtained</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactivate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed and Filed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Executed and Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submit_to_Approval_Time__c</fullName>
        <description>Days between Submitted Date to All Digital Initials Obtained</description>
        <formula>IF( 
(NOT(ISNULL(Submitted_Date__c)) &amp;&amp; NOT(ISNULL(All_Digital_Initials_Obtained_Date__c))), 
(IF(
All_Digital_Initials_Obtained_Date__c&gt; Submitted_Date__c, All_Digital_Initials_Obtained_Date__c - Submitted_Date__c, Submitted_Date__c - All_Digital_Initials_Obtained_Date__c)), 
(IF(
ISNULL(All_Digital_Initials_Obtained_Date__c) &amp;&amp; NOT(ISNULL(Submitted_Date__c)), 0, 
(IF(
NOT(ISNULL(All_Digital_Initials_Obtained_Date__c)), All_Digital_Initials_Obtained_Date__c - DATEVALUE(CreatedDate)
,0)) 
)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken by request to get Approved after getting submitted</inlineHelpText>
        <label>Submit to Approval Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submit_to_Complete_Time__c</fullName>
        <description>Days between Submitted Date to Complete Date</description>
        <formula>IF((NOT(ISNULL(Submitted_Date__c)) &amp;&amp; NOT(ISNULL(Complete_Date__c))), 
(IF(Complete_Date__c &gt; Submitted_Date__c, Complete_Date__c - Submitted_Date__c, Submitted_Date__c - Complete_Date__c)),
(IF(ISNULL(Complete_Date__c) &amp;&amp; NOT(ISNULL(Submitted_Date__c)),0, (IF(NOT(ISNULL(Complete_Date__c)), Complete_Date__c - DATEVALUE(CreatedDate) 
,0)) )) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken by request to get Complete after getting submitted</inlineHelpText>
        <label>Submit to Complete Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submitted_By_Phone_Number__c</fullName>
        <label>Submitted By Phone Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <formula>CreatedBy.FirstName  + &quot; &quot; +CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is auto populated with the name of the person who is submitting the request</inlineHelpText>
        <label>Submitted By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <description>Date when the request status changed to Submitted</description>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitted_On_Behalf_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted On Behalf Of</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ITPRX6CY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact_Email__c</fullName>
        <inlineHelpText>Enter the email address for the supplier representative for this effort. If you are requesting an RFI or RFP, leave this field blank.</inlineHelpText>
        <label>Supplier Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact_Name__c</fullName>
        <inlineHelpText>Enter the name of the supplier representative for this effort. If you are requesting an RFI or RFP, leave this field blank.</inlineHelpText>
        <label>Supplier Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact_Phone_Number__c</fullName>
        <inlineHelpText>Enter the telephone number for the supplier representative for this effort. If you are requesting an RFI or RFP, leave this field blank.</inlineHelpText>
        <label>Supplier Contact Phone Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the name of the company which the contract will be with. If you are requesting an RFI or RFP, leave this field blank.</inlineHelpText>
        <label>Supplier Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IT-SES</relationshipLabel>
        <relationshipName>ITPR1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Physical_Address__c</fullName>
        <inlineHelpText>Please enter the full physical address, including street, city, state, zip code and country if not in the US.</inlineHelpText>
        <label>Supplier Physical Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supplier_s_Legal_Entity_Name__c</fullName>
        <inlineHelpText>Provide the legal entity name including type (e.g. Inc., LLC, Corp)</inlineHelpText>
        <label>Supplier&apos;s Legal Entity Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCCC_Contract_Signature_Date__c</fullName>
        <inlineHelpText>Please enter the date the contract was signed by TCCC.</inlineHelpText>
        <label>TCCC Contract Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TCCC_Signatory_Level__c</fullName>
        <inlineHelpText>Was the contract signed by the CIO,
Please select the level of the person who signed the contract for The Company.</inlineHelpText>
        <label>TCCC Signatory Level</label>
        <picklist>
            <picklistValues>
                <fullName>CIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCCC_Signatory__c</fullName>
        <inlineHelpText>Please enter the name of the person who signed the contract for The Company.</inlineHelpText>
        <label>TCCC Signatory</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thereafter__c</fullName>
        <label>Thereafter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Budget_For_This_Effort1__c</fullName>
        <label>Total Budget For This Effort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Budget_For_This_Effort_Formula__c</fullName>
        <formula>(CAPEX1__c + CAPEX2__c + CAPEX3__c + OPEX1__c + OPEX2__c + OPEX3__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Budget For This Effort Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfered_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfered Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_SES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_Of_Information__c</fullName>
        <inlineHelpText>Please indicate the type of information which will be disclosed (i.e. supply chain, financials, information processes, heating systems, software, employee statistics, etc.)</inlineHelpText>
        <label>Type Of Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Field_1__c</fullName>
        <label>User Field 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Field_2__c</fullName>
        <label>User Field 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Governance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Governance Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ITPRXU81</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wave1_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wave1 Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wave1_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ITPRXbUs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wave1_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ITPRXbV7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wave1_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ITPRXbVH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wave1_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wave1 Rejected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wave2_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wave2 Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wave2_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wave2 Rejected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wave3_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wave3 Rejected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Who_Will_Be_Disclosing_Information__c</fullName>
        <inlineHelpText>Indicate who will be disclosing confidential information.  This determines which NDA form to prepare.</inlineHelpText>
        <label>Who Will Be Disclosing Information?</label>
        <picklist>
            <picklistValues>
                <fullName>Supplier Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCCC Entity Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Will_Supplier_Retain_Rights_To_New_IP__c</fullName>
        <inlineHelpText>Answer ‘Yes’ if the supplier will develop something for The Company and retain ownership of what has been developed. Describe the ownership situation in the following explanation field.</inlineHelpText>
        <label>Will Supplier Retain Rights To New IP?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year_1__c</fullName>
        <label>Year 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_2__c</fullName>
        <label>Year 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_3__c</fullName>
        <label>Year 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>user1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Access Viewer 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_SES3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>user2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Access Viewer 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_SES4</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>